# lens-for-gnome

./: .gitignore  Cargo.toml  README.md  build-deb.sh  build-flatpak.sh  install-service.sh  lens-for-gnome.service  lens.service  models.json  org.gnome.Lens.json  publish-snap.sh  run-manager.sh  run.sh
autostart/: org.gnome.Lens.desktop
gnome-extension/: build.sh  daemon.js  dependencies.js  extension.js  indicator.js  metadata.json  prefs.js  prefs_about.js  prefs_ai.js  prefs_dependencies.js  prefs_index.js  prefs_look_and_feel.js  prefs_mail.js  prefs_main.js  runtime.js  service.js  shexli-report.json  stylesheet.css  ui.js  ui_preview.js  ui_preview_image.js  ui_preview_office.js  ui_preview_pdf.js  ui_preview_text.js  ui_preview_video.js  ui_results.js  ui_search.js  ui_status.js
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.gnome-lens.gschema.xml  org.gnome.shell.extensions.lens-for-gnome.gschema.xml
gnome-extension/themes/: cyberpunk.css  default.css  dracula.css  gnome-light.css  matrix.css  nord.css  red-alert.css  sapphire.css  synthwave.css
metadata/: org.gnome.Lens.appdata.xml  org.gnome.Lens.desktop
src/: domain.rs  main.rs  manager.rs
src/engine/: hardware.rs  llm.rs  mod.rs  model_manager.rs  router.rs  runtime.rs  thread_pool.rs  vision.rs
src/engine/llm/: mod.rs  strategy_ast.rs  strategy_filter.rs  strategy_intent.rs  strategy_script.rs  strategy_synthesis.rs  strategy_temporal.rs
src/engine/router/: ast.rs  ipc.rs  mod.rs  script.rs
src/ingestion/: csv_file.rs  eml.rs  image.rs  legacy.rs  mod.rs  office.rs  pdf.rs  plaintext.rs  spreadsheet.rs  video.rs
src/plugins/: app_launcher.rs  email.rs  math.rs  mod.rs  vector_search.rs
src/triggers/: gmail_sync.rs  inotify_watcher.rs  mod.rs
src/vector/: db.rs  mod.rs  models.rs  search.rs  security.rs  store.rs
