# Cargo.toml
[package]
name = "gnome-lens"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
exmex = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.10"
pdf-extract = "0.7"
fastembed = "*"
dotext = "*"
calamine = "0.22"
csv = "1.3"
flate2 = "1.0"
notify = "6.1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"