[package]
name = "gnome-lens"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
exmex = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.10"
pdf-extract = "0.7"
fastembed = "*"
dotext = "*"
calamine = "0.22"
csv = "1.3"
flate2 = "1.0"
notify = "6.1"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"

#vision
image = "0.24" # For image preprocessing and brightness analysis
rqrr = "0.6" # Pure Rust QR code scanning
ocrs = "0.3" # (Future) Pure Rust OCR engine
fancy-regex = "0.13" # Used for complex lookarounds in smart extraction
md5 = "0.8.0"

#script
rhai = "1.19.0"


#mail
mailparse = "0.14"
imap = "2.4"
native-tls = "0.2"